macOS: Armature text line rendering is broken #124691
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#124691
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-14.4.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2
Blender Version
Broken: version: 4.2.0 Release Candidate, branch: blender-v4.2-release, commit date: 2024-07-14 11:14, hash:
b5145d6889c0
Worked: 4.1
Short description of error
Rendering of armatures with text set as their viewport display is wrong on macOS/Metal. I could not reproduce this issue on a NVIDIA GPU Windows system.
Exact steps for others to reproduce the error
None
(Found inObject Data Properties -> Shape -> Fill Mode
)Bone Properties
and changingViewport Display -> Custom Shape -> Custom Object
to the text object.Alternative:
macOS: Armature text rendering is brokento macOS: Armature text line rendering is brokenThis is similar to a bug I reported in 3.6: #109527. Maybe it is related.
I can reproduce this report, but not #109527, so not sure if these have something in common.
Can confirm, will set to High prio since it is a regression from 4.1.1
So I am currently trying to unify the "no_geom" path with non-apple hardware, and it seems that this path never considered some corner cases happening with index buffers. So that might very well be the issue here.
So, the attribute buffer for curves are in
GPU_PRIM_LINE_STRIP
topology but meshes useGPU_PRIM_LINES
. It is non-trivial to fix in shader with a simple uniform due to the old DRAW architecture. I am not even sure if the VertexFetch path on metal supportsGPU_PRIM_LINE_STRIP
with restart indices.So I think the only short term solution is to disable this feature for MacOS and revert to thin outlines.
@ChrisLend do you have time to do this fix?
@fclem I can make a PR but since I don't have a mac I'd need help actually testing the code
@ChrisLend I can help with that
Is there any workaround/mitigation for this until 4.2.2 (or whatever gets the patch) is released? It's breaking my rigs in weird ways but I don't want to go back to 4.1 if I don't have to.
Sadly not. But you can try out Blender 4.2.1 should be releasing soon.